# personal_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  PageBuild.py  README.md  azure-pipelines-validation.yml  azure-pipelines.yml  databricks.yml  load_control_sheet.py  main.py  pyproject.toml  requirements-theme-affinity.txt  requirements.txt  task_assign_customer_cells.py  task_build_markov_chain.py  task_build_page.py  task_build_targeting_scores.py  task_combine_customer_cells.py  task_conditional_probability_recs.py  task_create_tables.py  task_get_ad_items.py  task_load_control_sheet.py  task_map_theme_scores_to_ads.py  task_mirror_prod_tables_in_dev.py  task_parse_attributes.py  task_parse_theme_mapping.py  task_qa.py  task_results.py  task_results_agg.py  task_results_performance_checks.py  task_results_to_bigquery.py  task_results_top_ads_by_location.py  task_truncate_assignments_latest.py  task_viewed_bought.py
.azuredevops/: pull_request_template.md
.devcontainer/: .databrickscfg  Dockerfile  README.md  devcontainer.env  devcontainer.json  install_dsutils.sh  post_create.sh
QA/: Testing new themes.ipynb
adsv2/: README.md  __test_load_control_sheet_config.py  load_control_sheet.py  load_control_sheet_v2_settings.yaml  tables_settings.yaml
config/: global_solution_settings.yaml  load_control_sheet_settings.yaml  load_control_sheet_v2_settings.yaml  logging.conf  model_settings.yaml  next_gb.json  next_uk.json  params.json  resources.json  resources_test.json  settings.yaml  tables_settings.yaml  users.yaml
docs/: cicd_pipeline_guide.md  developer_workflow_guide.md  dynaconf_guide.md  model_lifecycle_foundation.md  nextads_main_job_architecture_map.md  pandera_guide.md  pctr_shopping_bag_feature_build.md  repo_migration_map.md  repo_structure.md  tables_setup_guide.md
hackathon_model/: clean_output.ipynb  config.py  predict_model.ipynb  ranking_encoders.joblib  run_pipeline_predict.ipynb  simple_rules_rank.ipynb
jobs/: __init__.py
next_ads/: AdRetrieval.py  Assignment.py  Attributes.py  Export.py  PageBuilder.py  Plotting.py  Results.py  Scoring.py  __init__.py  _src_compat.py  build_homepage.py  build_page.py  build_results.py  build_targeting_scores.py  calculate_results.py  create_tables.py  databricks.yml  load_control_sheet.py  overall_cells.py  overall_control_and_division.py  score_ads.py  task_assign_algo_division.py  task_assign_customer_cells.py  task_assign_fixed_cells.py  task_assign_fixed_cells_wip.py  task_assign_test_cells.py  task_build_page.py  task_build_results.py  task_build_targeting_scores.py  task_combine_customer_cells.py  task_create_tables.py  task_load_control_sheet.py  task_mirror_prod_tables_in_dev.py  task_qa.py  task_results.py  task_results_to_bigquery.py  task_results_topline.py  task_truncate_assignments_latest.py
notebooks/: theme_affinity_training_sampling_eda.py
real_time/: real_time_unknown.py
resources/: README.md
response_model/: customer_behaviour_features.py  pctr_advert_metadata_attribute_profile.py  pctr_advert_semantic_embeddings.py  pctr_build_training_snapshots.py  pctr_product_embedding_features.py  pctr_score_ad_candidates.py  pctr_seasonal_product_features.py  pctr_spark_model_training.py  pctr_tagged_click_training.py
scripts/: assign_customer_cells.py  build_markov_chain.py  build_page.py  build_page_v2.py  build_targeting_scores.py  build_v2_payload.py  combine_customer_cells.py  conditional_probability_recs.py  create_tables.py  data_pull.py  exclusions_export.py  get_ad_items.py  load_control_sheet.py  load_control_sheet_v2.py  map_theme_scores_to_ads.py  map_theme_scores_to_ads_v2.py  masid_handoff_check.py  mirror_prod_tables_in_dev.py  parse_attributes.py  parse_theme_mapping.py  plp_gs.py  plp_gs_combiner.py  plp_gs_fatface.py  qa.py  realtime_results.py  results.py  results_1.py  results_2.py  results_3.py  results_agg.py  results_performance_checks.py  results_to_bigquery.py  results_top_ads_by_location.py  start_stop_job.py  trigger_databricks_job.py  truncate_assignments_latest.py  viewed_bought.py
sql/: create_nextadscontrolsheet.sql  create_table_ad_items.sql  create_table_assignments.sql  create_table_assignments_latest.sql  create_table_assignments_v2.sql  create_table_assignments_v2_latest.sql  create_table_attribute_set.sql  create_table_attribute_set_latest.sql  create_table_conditional_probability_customer_item_interactions_latest.sql  create_table_conditional_probability_customer_theme_interactions_latest.sql  create_table_conditional_probability_item_themes_latest.sql  create_table_conditional_probability_scores.sql  create_table_conditional_probability_scores_latest.sql  create_table_conditional_probability_theme_associations_latest.sql  create_table_control_sheet.sql  create_table_control_sheet_latest.sql  create_table_control_sheet_latest_v2.sql  create_table_control_sheet_plp_raw.sql  create_table_control_sheet_plp_raw_latest.sql  create_table_control_sheet_raw.sql  create_table_control_sheet_raw_latest.sql  create_table_control_sheet_raw_latest_v2.sql  create_table_control_sheet_raw_v2.sql  create_table_control_sheet_v2.sql  create_table_customer_cells_fixed_history.sql  create_table_customer_cells_fixed_latest.sql  create_table_customer_cells_latest.sql  create_table_customer_cells_transient.sql  create_table_customer_cells_transient_latest.sql  create_table_exclusions.sql  (+41 more)
(+443 files in other folders)
