[project]
name = "next_ads"
version = "2.0.0"
description = "Personalised allocation of Ads on the Next website and app."
authors = [
    {name = "Tom Corke",email = "tom_corke@next.co.uk"},
    {name = "Ted Taylor",email = "edward_taylor@next.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
ipykernel = "6.29.5"
databricks-connect = "15.4.2"
gspread = "6.1.2"
pytest = ">=8.3.3"
dsutils = {path = "./wheels/dsutils-0.1.8-py3-none-any.whl"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
plotly = "^6.3.1"
networkx = "^3.5"
ruff = "^0.14.9"

[tool.ruff.format]
quote-style = "double"
