[project]
name = "next_ads"
version = "2.0.0"
description = "Personalised allocation of Ads on the Next website and app."
authors = [
    {name = "Tom Corke",email = "tom_corke@next.co.uk"},
    {name = "Ted Taylor",email = "edward_taylor@next.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
ipykernel = "6.29.5"
databricks-connect = "15.4.2"
gspread = "6.1.2"
pytest = ">=8.3.3"
dsutils = {path = "./wheels/dsutils-0.1.8-py3-none-any.whl"}
pandera = "^0.27.1"
azure-identity = "1.25.1"
azure-storage-blob = "12.28.0"
azure-mgmt-resource = "24.0.0"
dynaconf = {extras = ["yaml"], version = "3.2.12"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
plotly = "^6.3.1"
networkx = "^3.5"
ruff = "^0.14.9"

[tool.ruff.format]
quote-style = "double"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
markers = [
    "abfs_integration: marks tests as ABFS integration tests (deselect with '-m \"not abfs_integration\"')",
    "config_integration: marks tests as config_manager integration tests (deselect with '-m \"not config_integration\"')",
    "controlsheettable_integration: marks tests for checking control sheet table integration tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]