[project]
name = "next_ads"
version = "2.0.0"
description = "Personalised allocation of Ads on the Next website and app."
authors = [
    {name = "Tom Corke",email = "tom_corke@next.co.uk"},
    {name = "Ted Taylor",email = "edward_taylor@next.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
ipykernel = "6.29.5"
databricks-connect = "15.4.2"
gspread = "6.1.2"
pytest = ">=8.3.3"
dsutils = {path = "wheels/dsutils-0.1.11-py3-none-any.whl"}
pandera = "^0.27.1"
azure-identity = "1.25.1"
azure-storage-blob = "12.28.0"
azure-mgmt-resource = "24.0.0"
dynaconf = {extras = ["yaml"], version = "3.2.12"}
networkx = "3.5"
plotly = "6.3.1"
python-dotenv = "1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
plotly = "^6.3.1"
networkx = "^3.5"
ruff = "^0.14.9"

[tool.ruff]
line-length = 79
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "node_modules",
]

[tool.ruff.lint]
# Equivalent to flake8 error codes
select = [
    "E",     # PEP8 errors
    "W",     # PEP8 warnings
    "F",     # PyFlakes
    "C90",   # McCabe complexity
    "N",     # pep8-naming
    "D",     # pydocstyle (docstrings)
]
ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long (handled by formatter)
    "D100",  # Missing module docstring
    "D101",  # Missing class docstring
    "D102",  # Missing method docstring
    "D103",  # Missing method docstring
    "D205", # 1 blank line required after class docstring
    "D415", # First line should end with a period, question mark, or exclamation point
    "D200", # One-line docstring should fit in one line with quotes
    "N806", # Variable in function should be lowercase
    "N812", # Lowercase imported as non lowercase
    "D417", # Docstring should not be empty
    "N999", # Ignore all naming issues
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "N803", # Argument name should be lowercase
    "N815", # MixedCase variable in class scope
    "E402", # Module level import not at top of file
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.pytest.ini_options]
markers = [
    "abfs_integration: marks tests as ABFS integration tests (deselect with '-m \"not abfs_integration\"')",
    "config_integration: marks tests as config_manager integration tests (deselect with '-m \"not config_integration\"')",
    "controlsheettable_integration: marks tests for checking control sheet table integration tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]